--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -80,7 +80,7 @@
           </li>
           <li class="nav-item">
             <a
-              th:href="@{/user}"
+              th:href="@{/user/mealplans}"
               th:class="${activeTab == 'mealPlan'} ? 'nav-link active' : 'nav-link'"
               >Meal Plans</a
             >
